test/cli/test-validating-policy/explain-cost-limit/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: prod
spec:
  containers:
  - name: web
    image: nginx:1.27
